--- a/catalog/view/theme/second/stylesheet/stylesheet.css
+++ b/catalog/view/theme/second/stylesheet/stylesheet.css
@@ -214,11 +214,15 @@ div.required .control-label:before {
 }
 #search .dropdown-menu li, .ui-menu .ui-menu-item {
     margin-bottom: 10px;
+    min-height: 60px;
 }
 #search .dropdown-menu a {
     border-radius: 0;
     white-space: normal;
 }
+#search .ajaxadvance {
+    min-height: 50px;
+}    
 #search .ajaxadvance .name {
     margin:0;
     font-size: 21px;
@@ -226,7 +230,7 @@ div.required .control-label:before {
 #search .ajaxadvance .image {
     display:inline-flex;
     float: left;
-    margin-right:10px;
+    margin-right: 20px;
 }
 #search .ajaxadvance .content {
     display:inline-block;
